[project]
name = "diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "diffusers>=0.33.1",
    "jupyterlab>=4.4.2",
    "safetensors>=0.5.3",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
